--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+@font-face {
+    font-family: Norse-Bold;
+    src: url(Norse-Bold.otf);
+}
 * {
     margin: 0;
     padding: 0;
@@ -17,8 +21,11 @@
 
 .splash{
     position: relative;
-    width: 40vw;
+    width: 31vw;
     height: 100vh;
+    background-image: url("splash.avif");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .right-split{
@@ -26,8 +33,21 @@
 }
 
 .logo{
+    display: flex;
+    background-color: rgba(0, 0, 0, .5);
     position: relative;
-    bottom: 900px;
-    background-color: black;
-    opacity: .5;
+    bottom: 1050px;
+    width: 31vw;
+    height: 200px;
+    color: white;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    font-family: Norse-Bold;
+    font-size: 70pt;
+}
+
+.odin-logo {
+    max-width: 15%;
+    height: auto;
 }
