--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,11 @@
     font-family: Norse-Bold;
     src: url(Norse-Bold.otf);
 }
+
 * {
     margin: 0;
     padding: 0;
-  }
+}
 
 .container {
     display: flex;
@@ -17,19 +18,6 @@
 .left-split{
     flex: 1;
     
-}
-
-.splash{
-    position: relative;
-    width: 31vw;
-    height: 100vh;
-    background-image: url("splash.avif");
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.right-split{
-    flex: 1;
 }
 
 .logo{
@@ -44,10 +32,105 @@
     align-items: center;
     justify-content: center;
     font-family: Norse-Bold;
-    font-size: 70pt;
+    font-size: 65pt;
 }
 
 .odin-logo {
-    max-width: 15%;
+    max-width: 17%;
     height: auto;
+}
+
+.splash{
+    position: relative;
+    width: 31vw;
+    height: 100vh;
+    background-image: url("splash.avif");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.right-split{
+    background-color: #f9fafb;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-family: sans-serif;
+}
+
+.motto-text {
+    font-size: 1.3rem;
+    margin-left: 50px;
+    margin-bottom: 50px;
+    max-width: 45%;
+}
+
+.action-text{
+    margin-left: 50px ;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+label{
+    display: flex;
+    flex-direction: column;
+    color: black;
+    letter-spacing: .1rem;
+    margin-bottom: 5px;
+    font-size: .8rem;
+    font-weight: bold;
+}
+
+form{
+    min-width: 300px;
+    max-width: 50px;
+    transition: border-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+input{
+    box-sizing: border-box;
+    border: 1px solid #e5e7eb;
+    border-radius: 4px;
+    padding: 4px 8px;
+    width: 100;
+    font-size: 1rem;
+    margin-right: 32px;
+    height: 30px;
+}
+
+.input-forms form input:focus{
+    outline: none;
+    border-color: #007bff;
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+}
+
+.input-forms form input:invalid{
+    outline: none;
+    border-color: red;
+    box-shadow: red;
+}
+
+.input-forms{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+    gap: 20px;
+    max-width: 900px;
+    margin-left: 50px;
+    padding-bottom: 30px;
+}
+
+.input-area{
+    background-color: white;
+    box-shadow: 0 5px 5px 4px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+}
+
+button{
+    color: white;
+    background-color: #596D48;
+}
+
+a{
+    color: #596D48;
 }
